[tool.poetry]
name = "gousto-aoc-slackbot"
version = "0.1.0"
description = ""
authors = ["Lee Nugent <lee.nugent@gousto.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
