[tool.poetry]
name = "aoc-slackbot"
version = "0.1.0"
description = "A quick and dirty slack webhook bot that announces when members of a private leaderboard achieve a star!"
authors = ["Lee Nugent <lee@leenug.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
